feat (comment): Add full API along with document and filtering
